@@ -1,3 +1,7 @@
+20010611
+ - (bal) NeXT/MacOS X lack libgen.h and dirname().  Patch by Mark Miller 
+   <markm@swoon.net> 
+
 20010610
  - (bal) Missed two files in major resync.  auth-bsdauth.c and auth-skey.c
 
@@ -5595,4 +5599,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1273 2001/06/10 00:41:18 mouring Exp $
+$Id: ChangeLog,v 1.1274 2001/06/10 17:24:51 mouring Exp $
